set active class for router link in header

--- a/src/app/outer-template/header/header.component.html
+++ b/src/app/outer-template/header/header.component.html
@@ -18,11 +18,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <a class="nav-link" routerLink="/">Assets<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="news">News</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/news">News</a>
         </li>
         <!-- <li class="nav-item dropdown">
         <a
