--- a/src/app/news/news-list/news-list.component.html
+++ b/src/app/news/news-list/news-list.component.html
@@ -1,7 +1,10 @@
 <ul class="list-group list-group-flush" *ngIf="news">
   <ng-container *ngFor="let blank of [].constructor(7); index as i">
-    <li class="list-group-item news-link">
-      <a [href]="news[i].url" target="blank" [title]="news[i].title">{{ news[i].title }}</a>
+    <li class="list-group-item" [class]="i === 0 ? ['pb-2','pt-0'] : 'py-2'">
+      <a [href]="news[i].url" target="blank" [title]="news[i].title">
+        <span class="title-time">{{ timeFormat(news[i].published_at) }}</span>
+        <span class="news-title">{{ news[i].title }}</span>
+      </a>
     </li>
   </ng-container>
 </ul>
