optimize template of news-pics-group in large screen

--- a/src/app/news/news-pics-group/news-pics-group.component.css
+++ b/src/app/news/news-pics-group/news-pics-group.component.css
@@ -40,4 +40,12 @@ img {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
+  color: black;
+}
+
+.card-title:hover {
+  color: #2f76aa;
+}
+a:hover {
+  text-decoration: none;
 }
