--- a/src/app/news/news-pics-group/news-pics-group.component.html
+++ b/src/app/news/news-pics-group/news-pics-group.component.html
@@ -25,13 +25,12 @@
         <ng-container *ngFor="let blank of [].constructor(12) ;index as i">
           <ng-container *ngIf="news[i]">
             <div class="col-4 mb-3 pr-0">
-              <img [src]="news[i].image" alt="">
+              <a target="blank" [href]="news[i].url"><img [src]="news[i].image" alt=""></a>
             </div>
             <a [href]="news[i].url" [title]="news[i].title" target="blank"
               class="list-group-item list-group-item-action flex-column align-items-start col-8 list-group-text">
               <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">{{news[i].title}}</h5>
-                <small>3 days ago</small>
+                <h5 class="mb-1 small-news-title">{{news[i].title}}</h5>
               </div>
               <!-- <small>Donec id elit non mi porta.</small> -->
             </a>
