--- a/src/app/news/news-carousel/news-carousel.component.html
+++ b/src/app/news/news-carousel/news-carousel.component.html
@@ -12,7 +12,7 @@
       <ng-container *ngFor="let data of news; index as i">
         <div class="carousel-item" [class.active]="i === 0">
           <a [href]="data.url" target="blank"><img class="d-block w-100" [src]="data.image" [alt]="i + 'slide'" />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>{{data.title}}</h5>
               <!-- <p>{{data.title}}</p> -->
             </div></a>
