--- a/src/app/coin-data/overall-table/overall-table.component.html
+++ b/src/app/coin-data/overall-table/overall-table.component.html
@@ -4,11 +4,11 @@
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col" class="stick-left">名稱</th>
-          <th scope="col" class="text-right">價格</th>
+          <th scope="col" class="stick-left">name</th>
+          <th scope="col" class="text-right">price</th>
           <th scope="col" class="text-right">7d%</th>
-          <th scope="col" class="text-right">7d交易量</th>
-          <th scope="col" class="text-right">市值</th>
+          <th scope="col" class="text-right">7d volume</th>
+          <th scope="col" class="text-right">market cap</th>
         </tr>
       </thead>
       <tbody>
