--- a/src/app/outer-template/header/header.component.html
+++ b/src/app/outer-template/header/header.component.html
@@ -4,15 +4,8 @@
       <img src="assets/images/crypto.svg" width="30" height="30" class="d-inline-block align-top" alt="" />
       Crypto Info
     </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -50,7 +43,8 @@
       </li> -->
       </ul>
       <div class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" (input)="ticker.value=$any($event.target).value.toUpperCase()" type="search" placeholder="enter crypto ticker" #ticker aria-label="Search" />
+        <input class="form-control mr-sm-2" (input)="ticker.value=$any($event.target).value.toUpperCase()" type="search"
+          placeholder="enter symbol ex: BTC" #ticker aria-label="Search" />
         <button class="btn btn-outline-success my-2 my-sm-0" (click)="searchCoin(ticker.value)">Search</button>
       </div>
     </div>
