--- a/src/app/coin-data/description-block/description-block.component.css
+++ b/src/app/coin-data/description-block/description-block.component.css
@@ -42,6 +42,12 @@
   }
 }
 
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+  color: black;
+}
+
 td {
   max-width: 100px;
   overflow: hidden;
